<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="25"
    tools:context="hr.ferit.mdudjak.healthdiary.SymptomLogActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tvWeightTitle"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/AddWeightTitle"
        android:background="@color/colorForLogTitle"
        />

    <LinearLayout
        android:layout_width="@dimen/textViewWidth"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_height="0dp">
    <ImageButton
        android:id="@+id/bAddWeight"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_button_add"
        android:background="@color/colorForLogInput"/>

    <EditText
        android:id="@+id/etAddWeight"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="match_parent"
        android:inputType="numberDecimal"
        android:hint="@string/AddWeightHint"
        android:gravity="center"
        android:background="@color/colorForLogInput"
        />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tvHeartRateTitle"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/AddHeartRateTitle"
        android:background="@color/colorForLogTitle"
        />
    <LinearLayout
        android:layout_width="@dimen/textViewWidth"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_height="0dp">
        <ImageButton
            android:id="@+id/bAddHeartRate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_button_add"
            android:background="@color/colorForLogInput"/>

    <EditText
        android:id="@+id/etAddHeartRate"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="match_parent"
        android:inputType="number"
        android:hint="@string/AddHeartRateHint"
        android:gravity="center"
        android:background="@color/colorForLogInput"
        />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tvBloodSugarTitle"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/AddBloodSugarTitle"
        android:background="@color/colorForLogTitle"
        />
    <LinearLayout
        android:layout_width="@dimen/textViewWidth"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_height="0dp">
        <ImageButton
            android:id="@+id/bAddBloodSugar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_button_add"
            android:background="@color/colorForLogInput"/>

    <EditText
        android:id="@+id/etAddBloodSugar"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="match_parent"
        android:inputType="numberDecimal"
        android:hint="@string/AddBloodSugarTitleHint"
        android:gravity="center"
        android:background="@color/colorForLogInput"
        />
</LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/tvBodyPressureTitle"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/AddBodyPressureTitle"
        android:background="@color/colorForLogTitle"
        />
        <LinearLayout
            android:layout_width="@dimen/textViewWidth"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="101"
            android:layout_weight="2"
            android:layout_height="0dp">
            <ImageButton
                android:id="@+id/bAddBodyPressure"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_button_add"
                android:background="@color/colorForLogInput"/>

    <EditText
        android:id="@+id/etAddBodyPressureUpper"
        android:layout_width="0dp"
        android:layout_weight="51"
        android:layout_height="match_parent"
        android:inputType="number"
        android:textSize="@dimen/bodyPressureTextSize"
        android:hint="@string/AddUpperBodyPressureHint"
        android:gravity="center"
        android:background="@color/colorForLogInput"
        />
    <EditText
        android:id="@+id/etAddBodyPressureLower"
        android:layout_width="0dp"
        android:layout_weight="50"
        android:layout_height="match_parent"
        android:inputType="number"
        android:hint="@string/AddLowerBodyPressureHint"
        android:textSize="@dimen/bodyPressureTextSize"
        android:gravity="center"
        android:background="@color/colorForLogInput"
        />
        </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="3"
        android:layout_height="0dp">
    <Button
        android:id="@+id/bAddBodyLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bAddBodyLogText"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:padding="@dimen/buttonPadding"
        />

    <Button
        android:id="@+id/bAddBodyCameraLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/buttonPadding"
        android:text="@string/bAddBodyCameraLogText"
        android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
