<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.ferit.mdudjak.healthdiary.AddSymptomInfo">

    <LinearLayout
        android:id="@+id/lLAreaInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_margin="@dimen/marginForSearchArea"
        android:background="@color/colorForLogTitle"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etSearchArea"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="64dp"
            android:inputType="text"
            android:layout_gravity="center"
            android:hint="@string/hintForAreaSearch"/>
        <ImageButton
            android:id="@+id/ibSearchArea"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search_button"/>
    </LinearLayout>

    <ListView
        android:id="@+id/areaList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lLAreaInput"
        android:layout_above="@+id/inputAreaLayout"
        android:layout_alignLeft="@+id/lLAreaInput"
        android:layout_alignStart="@+id/lLAreaInput">
    </ListView>
    <RelativeLayout
        android:id="@+id/inputAreaLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/marginForSearchArea"
        android:background="@color/colorForLogInput">
        <TextView
            android:id="@+id/txtTitleForAreaMissing"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/marginForSearchArea"
            android:text="@string/txtTitleForAreaMissing"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/lLAreaLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:layout_below="@id/txtTitleForAreaMissing"
            android:layout_margin="@dimen/marginForSearchArea"
            android:background="@color/colorForLogTitle"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/etAddArea"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="64dp"
                android:inputType="text"
                android:layout_gravity="center"
                android:hint="@string/hintForAreaInput"/>
            <ImageButton
                android:id="@+id/ibAddArea"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_button_add"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>